<resources>
    <string name="app_name">스마트 주식 계산기</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- PurchaseFragment -->
    <string name="purchase_fragment_sub_txt">- 가격은 100이상 3,000,000이하로 입력이 가능합니다.\n- 수량은 1이상 10,000,000이하로 입력이 가능합니다.\n- 입력이 완료되면 입력 \'완료버튼\'을 먼저 누르신 후 \'확인\'버튼을 누르시면 매수단가가 나옵니다.\n- 매도 가격은 기입하지 않아도 무방합니다.</string>

    <!-- ProfitFragment -->
    <string name="profit_fragment_sub_txt">- 매수가 및 매도가는 100이상 3,000,000이하로 입력이 가능합니다.\n- 수량은 1이상 10,000,000이하로 입력이 가능합니다.\n- 수수료는 0이상 1이하로 입력이 가능합니다.</string>
    <string name="profit_fragment_purchase_txt">매수가(원)</string>
    <string name="profit_fragment_sell_txt">매도가(원)</string>
    <string name="profit_fragment_amount_txt">수량(개)</string>
    <string name="profit_fragment_tax_txt">세금(%)</string>
    <string name="profit_fragment_charge_txt">수수료(%)</string>
    <string name="profit_fragment_result_txt">이때 실수익과 수익률은?</string>

    <!-- Compound_interest-->
    <string name="compound_interest_fragment_sub_txt">- 원금의 추가 투입이 없다고 가정합니다.</string>

</resources>
