<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="view.ProfitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--입력 영역-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="@string/profit_fragment_purchase_txt"/>

                    <EditText
                        android:id="@+id/purchase_price_edit_box"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/editbox_shape_gray"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:textSize="20dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:inputType="number"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="@string/profit_fragment_sell_txt"/>

                    <EditText
                        android:id="@+id/selling_price_edit_box"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/editbox_shape_gray"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:textSize="20dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:inputType="number"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="@string/profit_fragment_amount_txt"/>

                    <EditText
                        android:id="@+id/amount_edit_box"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/editbox_shape_gray"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:inputType="number"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="@string/profit_fragment_tax_txt"/>

                    <TextView
                        android:id="@+id/tax_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/editbox_shape_gray"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:text="0.3"
                        android:textSize="20dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="@string/profit_fragment_charge_txt"/>

                    <EditText
                        android:id="@+id/charge_edit_box"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/editbox_shape_gray"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:textSize="20dp"
                        android:paddingRight="3dp"
                        android:inputType="numberDecimal"
                        android:text="0.015"
                        android:layout_weight="3"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center_vertical"
                    android:textSize="20dp"
                    android:text="@string/profit_fragment_result_txt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/colorTextHintGray"
                    android:text="@string/profit_fragment_sub_txt"/>

                <Button
                    android:id="@+id/result_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="15dp"
                    android:text="확인"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />

            </LinearLayout>

            <!-- 결과 영역-->
            <LinearLayout
                android:id="@+id/result_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="실수익(원)"/>

                    <TextView
                        android:id="@+id/result_of_profit_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:textSize="20dp"
                        android:paddingRight="3dp"
                        android:layout_weight="3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center_horizontal|center_vertical"
                        android:layout_weight="7"
                        android:text="수익률(%)"/>

                    <TextView
                        android:id="@+id/result_of_rate_tv"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold"
                        android:maxLines="1"
                        android:paddingLeft="3dp"
                        android:textSize="20dp"
                        android:paddingRight="3dp"
                        android:layout_weight="3"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
